--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "extends": ["airbnb-base"],
   "rules": {
+    "no-unused-vars": ["error", { "vars": "all", "varsIgnorePattern": ".", "args": "none", "argsIgnorePattern": "^_", "caughtErrors": "none" }],    
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
