--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "sass": "^1.57.1"
   }
 }
